Add integration to HDS core, switch to use postcss

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,4 +4,13 @@
 // This file includes all imports
 //
 
-// @import 'CHANGE_ME/**/*.*';
+@import "~breakpoint-sass";
+
+@import "hds";
+@import "base/*";
+//@import "components/**/*.*";
+
+@import "library/variables/*";
+@import "library/mixins/*";
+@import "layout/*";
+@import "state/*";
