Added linters for scss and js.

--- a/src/scss/_hds.scss
+++ b/src/scss/_hds.scss
@@ -1,8 +1,11 @@
+//
+// @file
+// This file includes Helsinki Design System core packages.
+//
 @import "~normalize.css";
 
 @import "~hds-design-tokens/lib/all.css";
 
 @import "~helsinki-design-system/packages/core/src/utils/animations.css";
 @import "~helsinki-design-system/packages/core/src/utils/helpers.css";
-
 @import "~helsinki-design-system/packages/core/src/components/all.css";
