--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,5 @@
 //
 // @file
-//
 // This file includes all imports
 //
 
@@ -8,8 +7,7 @@
 
 @import "hds";
 @import "base/*";
-//@import "components/**/*.*";
-
+@import "components/*";
 @import "library/variables/*";
 @import "library/mixins/*";
 @import "layout/*";
