--- a/templates/component_library/component-library--hdbt.html.twig
+++ b/templates/component_library/component-library--hdbt.html.twig
@@ -4,6 +4,7 @@
  * Consists a list of all components with a markup example and componnet.
 #}
 <div class="component-library-wrapper">
+  <div class="component-library__nav"></div>
   <h2>Components</h2>
 
   {#
