--- a/src/scss/components/icons/_icons.scss
+++ b/src/scss/components/icons/_icons.scss
@@ -3,7 +3,7 @@
 // Icons
 //
 .icon {
-  --icon-proportions: var(--spacing-m);
+  --icon-proportions: #{$spacing-m};
   height: var(--icon-proportions);
   width: var(--icon-proportions);
 }
