--- a/src/scss/components/misc/_system-messages.scss
+++ b/src/scss/components/misc/_system-messages.scss
@@ -3,11 +3,11 @@
 // System messages
 //
 .hds-notification {
-  margin-bottom: $spacing-4-xl;
+  margin-bottom: $spacing-quadruple;
 }
 
 .hds-notification__label {
   .icon {
-    margin-right: $spacing-2-xs;
+    margin-right: $spacing-half;
   }
 }
