UHF-14 Add HelsinkiGrotesk font

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,6 +8,7 @@
 @import "hds";
 @import "library/variables/*.*";
 @import "library/mixins/*.*";
+@import "library/fonts/*.*";
 @import "layout/*";
 @import "state/*";
 @import "base/**/*.*";
