--- a/templates/component_library/component-library--hdbt.html.twig
+++ b/templates/component_library/component-library--hdbt.html.twig
@@ -51,4 +51,23 @@
       " }}
     </div>
   </div>
+
+  <h3>Form elements</h3>
+  <button class="component-library__accordion">Checkbox</button>
+  <div class="component-library__panel">
+    <div class="component-library__example">
+      <div class="hds-checkbox">
+        <input type="checkbox" id="checkbox1" class="hds-checkbox__input" value="foo" />
+        <label for="checkbox1"  class="hds-checkbox__label">Option</label>
+      </div>
+    </div>
+    <div class="component-library__code">
+      Use Drupal Form API Checkbox or this markup:<br /><br />
+      {{ '<div class="hds-checkbox">'|e('html') }}<br />
+      &nbsp;&nbsp;{{ '<input type="checkbox" id="checkbox1" class="hds-checkbox__input" value="foo" />'|e('html') }}<br />
+      &nbsp;&nbsp;{{ '<label for="checkbox1" class="hds-checkbox__label">Option</label>\n'|e('html') }}<br />
+      {{ '</div>'|e('html') }}
+    </div>
+  </div>
+
 </div>
