--- a/src/scss/_hds.scss
+++ b/src/scss/_hds.scss
@@ -7,6 +7,8 @@
 // Import HDS Tokens.
 @import "~hds-design-tokens/lib/all.css";
 
+@import "~hds-core/lib/icons/icon.css";
+@import "~hds-core/lib/icons/all.css";
 @import "~hds-core/lib/base.css";
 @import "~hds-core/lib/utils/animations.css";
 @import "~hds-core/lib/utils/helpers.css";
