--- a/templates/component_library/component-library--hdbt.html.twig
+++ b/templates/component_library/component-library--hdbt.html.twig
@@ -120,6 +120,27 @@
     </div>
   </div>
 
+  <button class="component-library__accordion">Status labels</button>
+  <div class="component-library__panel">
+    <div class="component-library__example">
+      {% set status_labels = {
+        default: { label: 'Status label - Default' },
+        info: { type: 'info', label: 'Status label - Info' },
+        success: { type: 'success', label: 'Status label - Success' },
+        alert: { type: 'alert', label: 'Status label - Alert' },
+        error: { type: 'error', label: 'Status label - Error' },
+      } %}
+      {% for status in status_labels %}
+        {% include '@hdbt/misc/status-label.html.twig' with { type: status.type, label: status.label } %}
+      {% endfor %}
+    </div>
+    <div class="component-library__code">
+      {{ "
+          {% include '@hdbt/misc/status-label.html.twig' with { type: 'error', label: 'Label which indicates error' } %}
+      " }}
+    </div>
+  </div>
+
   <h3>Form elements</h3>
   <button class="component-library__accordion">Checkbox</button>
   <div class="component-library__panel">
