--- a/templates/misc/status-messages.html.twig
+++ b/templates/misc/status-messages.html.twig
@@ -22,30 +22,44 @@
  * @see claro_preprocess_status_messages().
  */
 #}
-{% set section_classes = ['hds-notification'] %}
 {% set classes = ['hds-notification__content'] %}
 
 {% for type, messages in message_list %}
+  {% set section_classes = ['hds-notification'] %}
+
   {% if type == 'error' %}
-    {% set section_classes = ['hds-notification', 'hds-notification--error'] %}
+    {% set section_classes = section_classes|merge(['hds-notification--error']) %}
     {% set notification_icon = 'error' %}
   {% elseif type == 'warning' %}
-    {% set section_classes = ['hds-notification', 'hds-notification--alert'] %}
+    {% set section_classes = section_classes|merge(['hds-notification--alert']) %}
     {% set notification_icon = 'alert-circle' %}
-  {% else %}
-    {% set section_classes = ['hds-notification', 'hds-notification--success'] %}
+  {% elseif type == 'success' %}
+    {% set section_classes = section_classes|merge(['hds-notification--success']) %}
     {% set notification_icon = 'check' %}
+  {% else %}
+    {% set section_classes = section_classes|merge(['hds-notification--info']) %}
+    {% set notification_icon = 'info-circle' %}
+  {% endif %}
+
+  {% if size == 'large' %}
+    {% set section_classes = section_classes|merge(['hds-notification--large']) %}
+  {% elseif size == 'small' %}
+    {% set section_classes = section_classes|merge(['hds-notification--small']) %}
   {% endif %}
 
   <section data-drupal-messages aria-label="{{ 'Notification'|t }}" class="{{ section_classes|without('messages-list')|join(' ') }}">
     {% set is_message_with_title = status_headings[type] %}
-    {% set is_message_with_icon = type in ['error', 'status', 'warning'] %}
+    {% set is_message_with_icon = type in ['error', 'default', 'warning', 'success'] %}
     <div role="contentinfo" aria-labelledby="{{ title_ids[type] }}" class="{{ classes|without('messages-list__item')|join(' ') }}">
       {% if is_message_with_title or is_message_with_icon %}
         {% if is_message_with_title %}
           <div class="hds-notification__label" role="heading" aria-level="2">
             {% include "@hdbt/misc/icon.twig" with {icon: notification_icon} %}
             <span id="{{ title_ids[type] }}">{{ status_headings[type] }}</span>
+          </div>
+        {% else %}
+          <div class="hds-notification__label" role="heading" aria-hidden="true">
+            {% include "@hdbt/misc/icon.twig" with {icon: notification_icon} %}
           </div>
         {% endif %}
       {% endif %}
