--- a/src/scss/components/misc/_system-messages.scss
+++ b/src/scss/components/misc/_system-messages.scss
@@ -3,7 +3,7 @@
 // System messages.
 //
 .hds-notification {
-  margin-bottom: $spacing-quadruple;
+  margin-bottom: $spacing;
 }
 
 .hds-notification__label {
