--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -1,4 +1,15 @@
 //
 // @file
+//
 // This file includes styles for a container.
 //
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding: $spacing;
+  transition: padding 100ms linear;
+
+  @include breakpoint($breakpoint-l) {
+    padding: $spacing $spacing-double;
+  }
+}
