--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,4 +1,11 @@
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: $base-font-family;
   line-height: $lineheight-l;
+  display: flex;
+  flex-direction: column;
 }
