--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -77,7 +77,7 @@
 </div>
 
 {% if page.footer_top or page.footer_bottom %}
-  <footer role="contentinfo" class="footer">
+  <footer role="contentinfo" class="footer footer--dark">
     {% if page.footer_top %}
       {% embed "@hdbt/misc/container.twig" with {container_element: 'footer-top'} %}
         {% block container_content %}
