UHF-30 Change branding element to correct color

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 .header-top {
-  background-color: $color-black-5;
+  background-color: $hdbt-color-white;
   display: none;
   padding: 0 $spacing;
 
